# ODD_Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: odd_definition.yaml
include/: Database.h  Datatypes.h  Expression.h  Guardrail.h  ODDEngine.h  Ontology.h
ontology/: example_ontology.rdf
src/: Database.cpp  Expression.cpp  Guardrail.cpp  ODDEngineInference.cpp  ODDEngineParser.cpp  ODDEngineStructureHelper.cpp  Ontology.cpp  main.cpp
